--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -17,15 +17,16 @@
 <br>
 
 <div class="page-header">
-    <h1><a href="/">Django Girls Blog</a></h1>
+    <h1><a href="/">Django Girls Blog</a></h1></div>
     {% for post in posts %}
+    
     <div class="post">
         <p>published: {{ post.published_date }}</p>
         <h1><a href="">{{ post.title }}</a></h1>
         <p>{{ post.text|linebreaks }}</p>
     </div>
 {% endfor %}
-</div>
+
 </div>
 
 
